--- a/rest-countries/src/components/Button.module.scss
+++ b/rest-countries/src/components/Button.module.scss
@@ -1,7 +1,8 @@
-@import '../variables.scss';
+@import "../variables.scss";
 
 .btn {
   width: 100px;
+  margin-right: 10px;
   height: 40px;
   font-size: 16px;
   margin-top: 20px;
