--- a/rest-countries/src/index.scss
+++ b/rest-countries/src/index.scss
@@ -1,3 +1,7 @@
+
+@import './variables.scss';
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +14,19 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+}
+
+.theme-light {
+  background-color: $very-light-gray;
+  color: black;
+}
+
+.theme-dark {
+  background-color: $very-dark-blue;
+  color: white;
 }
