mobile Items styles && react select

--- a/rest-countries/src/App.scss
+++ b/rest-countries/src/App.scss
@@ -1,7 +1,7 @@
 
-@import './variables.scss';
+// @import './variables.scss';
 
-.App {
-  text-align: center;
-}
+// .App {
+//   text-align: center;
+// }
 
