--- a/rest-countries/src/variables.scss
+++ b/rest-countries/src/variables.scss
@@ -1,6 +1,13 @@
+
+
 $dark-blue: hsl(209, 23%, 22%);
 $very-dark-blue: hsl(207, 26%, 17%);
 $very-dark-blue-light: hsl(200, 15%, 8%);
 $dark-gray: hsl(0, 0%, 52%);
 $very-light-gray: hsl(0, 0%, 98%);
+$dark-gray-trans: hsla(0, 0%, 52%, 0.1);
 $white: hsl(0, 0%, 100%);
+
+
+$radius: 0.5rem;
+$shadow: 0 0 10px 10px $dark-gray-trans;
