--- a/rest-countries/src/components/Button.module.scss
+++ b/rest-countries/src/components/Button.module.scss
@@ -1,12 +1,17 @@
 @import "../variables.scss";
 
 .btn {
-  width: 100px;
-  margin-right: 10px;
-  height: 40px;
-  font-size: 16px;
-  margin-top: 20px;
-  background: $dark-blue;
-  color: white;
+  width: 80px;
+  margin: 5px;
+  height: 30px;
+  // font-size: 14px;
+  
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  background: $white;
+  border-radius: 2px;
+  box-shadow: 0 0 3px 3px $dark-gray-trans;;
   border: none;
+  cursor: pointer;
 }
