--- a/rest-countries/src/components/Countries.module.scss
+++ b/rest-countries/src/components/Countries.module.scss
@@ -1,5 +1,20 @@
 .filter {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
+  margin: 1.3rem;
+}
+
+@media screen and (min-width: 600px) {
+  .filter {
+    display: flex;
+    flex-direction: row;
+
+    // font-size: 14px;
+    // display: flex;
+    // flex-direction: column;
+  }
+
+
+  
 }
