--- a/rest-countries/src/components/SearchBar.module.scss
+++ b/rest-countries/src/components/SearchBar.module.scss
@@ -1,12 +1,17 @@
-
 @import "../variables.scss";
 
 .search {
-
-  border: none;
-  border-radius: 0.25rem;
-  box-shadow: $shadow;
-  line-height: 4rem;
   font-size: 16px;
+  box-shadow: $shadow;
 
+  padding: 1.5rem 2rem;
+  border-radius: 0.2rem;
+  background-color: rgb(255, 255, 255);
+  border: none;
+}
+
+@media screen and (min-width: 600px) {
+  .search {
+    width: 30%;
+  }
 }
