--- a/rest-countries/src/index.scss
+++ b/rest-countries/src/index.scss
@@ -1,11 +1,7 @@
-
-@import './variables.scss';
-
-
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
+@import "./variables.scss";
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap");
 
 body {
-
   margin: 0;
   font-family: "Nunito Sans", sans-serif;
 
@@ -17,8 +13,14 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+input:focus,
+textarea:focus,
+select:focus {
+  outline: none;
 }
 
 a {
