--- a/rest-countries/src/variables.scss
+++ b/rest-countries/src/variables.scss
@@ -9,5 +9,6 @@ $dark-gray-trans: hsla(0, 0%, 52%, 0.1);
 $white: hsl(0, 0%, 100%);
 
 
-$radius: 0.5rem;
+$radius: 0.4rem;
 $shadow: 0 0 10px 10px $dark-gray-trans;
+$small-shadow: 0 0 3px 3px $dark-gray-trans;
