--- a/rest-countries/src/components/Layout.module.scss
+++ b/rest-countries/src/components/Layout.module.scss
@@ -2,11 +2,8 @@
 
 .container {
   max-width: 1440px;
-  // padding: 0 1rem;
-  margin: 3rem auto 6rem;
-
-  // margin: 2rem;
- 
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .logo {
@@ -14,32 +11,19 @@
 }
 
 .header {
-  
   height: 5rem;
-  padding: 0 1.3rem 0 1.3rem;
+  padding: 0 2rem 0 2rem;
+
   display: flex;
   justify-content: space-between;
   align-items: center;
-  
-  background-color: $white;
-  box-shadow: 0 0 3px 3px $dark-gray-trans;
-}
 
+  background-color: $white;
+  box-shadow: $small-shadow;
+}
 
 @media screen and (min-width: 600px) {
-
   .header {
-    padding: 0 3rem 0 3rem;
-    // margin: 3rem;
-    // display: flex;
-    // justify-content: space-between;
-    // align-items: center;
-    // gap: 1rem;
+    padding: 0 4rem 0 4rem;
   }
-
-
- 
 }
-
-
- 
