--- a/rest-countries/src/components/List.module.scss
+++ b/rest-countries/src/components/List.module.scss
@@ -1,49 +1,13 @@
 .items {
-
-  // display: flex;
-  // flex-wrap: wrap;
-
-  // 
-  // display: grid;
-  // gap: 4rem;
-  // grid-template-columns: 1fr;
-  // justify-content: center;
-
   margin: 4rem;
   display: grid;
   gap: 4rem;
   grid-template-columns: 1fr;
-  justify-content: center;
-
-  
 }
-
-
 
 @media screen and (min-width: 600px) {
   .items {
-    grid-template-columns: repeat(auto-fit, minmax(14rem, 16rem));
+    grid-template-columns: repeat(auto-fit, minmax(15rem, 17rem));
+    justify-content: space-between;
   }
-
-  // .card {
-  //   flex-direction: column;
-  //   text-align: center;
-  //   min-width: 14rem;
-
-  //   &__img {
-  //     width: 100%;
-  //     height: 12rem;
-  //   }
-  // }
 }
-
-// @media screen and (min-width: 600px) {
-
-
-//   .items {
-//     grid-template-columns: repeat(auto-fit, minmax(14rem, 16rem));
-//   }
-
-// }
-
-
