--- a/rest-countries/src/components/List.module.scss
+++ b/rest-countries/src/components/List.module.scss
@@ -8,6 +8,6 @@
 @media screen and (min-width: 600px) {
   .items {
     grid-template-columns: repeat(auto-fit, minmax(15rem, 17rem));
-    justify-content: space-between;
+    justify-content: space-around;
   }
 }
