--- a/rest-countries/src/components/SearchBar.module.scss
+++ b/rest-countries/src/components/SearchBar.module.scss
@@ -10,7 +10,7 @@
   border: none;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: $mobile) {
   .search {
     grid-column: 1/2;
   }
