--- a/rest-countries/src/components/UI/dropdown.scss
+++ b/rest-countries/src/components/UI/dropdown.scss
@@ -1,5 +1,7 @@
 @import "../../variables.scss";
 
+// 😳 used https://github.com/dbilgili/Custom-ReactJS-Dropdown-Components styles
+
 .dd-wrapper {
   position: relative;
 
