--- a/rest-countries/src/variables.scss
+++ b/rest-countries/src/variables.scss
@@ -12,3 +12,6 @@ $white: hsl(0, 0%, 100%);
 $radius: 0.4rem;
 $shadow: 0 0 10px 10px $dark-gray-trans;
 $small-shadow: 0 0 3px 3px $dark-gray-trans;
+
+$mobile: 600px;
+$laptop: 1440px;
