--- a/rest-countries/src/components/RegionFilter.module.scss
+++ b/rest-countries/src/components/RegionFilter.module.scss
@@ -1,6 +1,6 @@
 @import "../variables.scss";
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: $mobile) {
   .filter {
     grid-column: 3/4;
   }
